fix MPS-6712 jvmargs are multiplicated between tasks in mps​.​tests​.​xml